# aquarium

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
a_strategy_game/: Cargo.toml  a_strategy_game_mq.rs
a_strategy_game/a_strategy_game_web/src/: event_listeners.rs  js_storage.rs  load_bitmap.rs  main.rs  time.rs
a_strategy_game/gamecore/: Cargo.toml
a_strategy_game/gamecore/src/: animation.rs  console.rs  control.rs  debugging.rs  drawing.rs  game_commands.rs  gamestate.rs  inspect.rs  keybindings.rs  lib.rs  monotonic_clock.rs  pathfinder.rs  prelude.rs  random.rs  sanity_check.rs  tracing.rs  water_sim.rs
a_strategy_game/gamecore/src/effects/: mod.rs
a_strategy_game/gamecore/src/entities/: base.rs  building.rs  building2.rs  building3.rs  building_typ.rs  downcast.rs  entities.rs  entity.rs  mod.rs  pawn.rs  pawn2.rs  pawn3.rs  pawn_typ.rs  pawn_worker.rs  resource_slot.rs  team.rs
a_strategy_game/gamecore/src/map_gen/: flatland.rs  inception.rs  mod.rs
a_strategy_game/gamecore/src/resources/: mod.rs  renewable.rs  resource.rs  resource_map.rs
a_strategy_game/gamecore/src/tests/: functional_tests.rs  headless_renderer.rs  mod.rs  test_setup.rs  test_utils.rs  ui_tests.rs
a_strategy_game/gamecore/src/tilemap/: mod.rs  tile.rs  tilemap.rs
a_strategy_game/gamecore/src/ui/: game_ui.rs  internal.rs  mod.rs  ui.rs
a_strategy_game_web/: Cargo.toml  index.html
a_strategy_game_web/src/: graphics_postprocessing.rs  js_commands.rs
aquarium/: Cargo.toml  aquarium_mq.rs
aquarium/aquarium_core/: Cargo.toml  aq_state.rs  aquarium_core.rs  assembly.rs  contraption.rs  critter.rs  gamestate.rs  lib_aquarium.rs  prelude.rs  world.rs
aquarium/aquarium_core/neural_net/: brain.rs  mod.rs  vec2d.rs
aquarium/aquarium_core/physics2d/: bone.rs  contraption.rs  mod.rs  rigid_body.rs  spring.rs
aquarium/aquarium_web/: Cargo.toml  Trunk.toml  index.html
aquarium/aquarium_web/src/: main.rs
binpack2d/: Cargo.toml
coregame/: Cargo.toml
corelibs/binpack2d/: Cargo.toml  binpack2d.rs
corelibs/cel/: Cargo.toml
corelibs/cel/src/: backcompat.rs  c_deque.rs  c_set.rs  c_vec.rs  cel.rs  into_cel.rs  lib.rs  serde_support.rs  special_impls.rs  vector_support.rs
corelibs/core_util/: Cargo.toml
corelibs/core_util/src/: cartesian_product.rs  collect_grouped.rs  ignore.rs  inspect_err.rs  lib.rs  replace_with.rs  saturating_add_assign.rs  sorted.rs  with.rs
corelibs/fixed_str/: Cargo.toml
corelibs/fixed_str/src/: lib.rs
corelibs/geometry/: Cargo.toml
corelibs/geometry/src/: barycentric_coordinates.rs  boundingbox.rs  bounds2d.rs  constants.rs  internal.rs  lib.rs  math.rs  orientation.rs  ray.rs  transform.rs
corelibs/image_util/: Cargo.toml
corelibs/image_util/src/: color.rs  img.rs  lib.rs  mipmap.rs  normal_map.rs  srgb.rs
corelibs/matrix/: Cargo.toml
corelibs/matrix/src/: inspect.rs  lib.rs  transform2.rs  transforms.rs
corelibs/memkeep/: Cargo.toml  id.rs  memkeep.rs  serde_support.rs
corelibs/memkeep/src/: id.rs  lib.rs  with_id.rs
corelibs/pathfinder/: Cargo.toml  distance_map.rs  internal.rs  pathfinder.rs
corelibs/pathfinder/src/: distance_map.rs  lib.rs
corelibs/proc_macros/src/: lib.rs
corelibs/proc_macros_impl/: Cargo.toml
corelibs/proc_macros_impl/src/: derive_setters.rs  fixed_str_macros.rs  lib.rs
corelibs/vector/: Cargo.toml
corelibs/vector/src/: lib.rs
engine/: Cargo.toml
engine/src/: inputs.rs  keymap.rs  lib.rs  prelude.rs
gamecore/: Cargo.toml
gamecore/src/: c_deque.rs  c_set.rs  c_vec.rs  cli_mode.rs  console.rs  control.rs  debug_opts.rs  debugging.rs  drawing.rs  font_layout.rs  game_commands.rs  gamestate.rs  inputs.rs  keybindings.rs  lib.rs  output.rs  prelude.rs  random.rs  sanity_check.rs  state.rs  tile_to_pos.rs  tracing.rs  water_sim.rs
gamecore/src/buildings/: building.rs  mod.rs
gamecore/src/entities/: building.rs  mod.rs  pawn.rs  route.rs
gamecore/src/input/: button.rs  inputs.rs  keybindings.rs  keymap.rs  mod.rs
gamecore/src/map_gen/: inception.rs
gamecore/src/output/: color.rs  line.rs  mod.rs  output.rs  rectangle.rs  sprite.rs
gamecore/src/resources/: resource.rs
gamecore/src/tests/: functional_tests.rs  headless_renderer.rs  mod.rs  test_inputs.rs  test_setup.rs  test_utils.rs  ui_tests.rs
gamecore/src/tilemap/: map.rs  mat.rs  mod.rs  testmap.rs  tile.rs  tilemap.rs
gamecore/src/ui/: grid_layout.rs  internal.rs  mod.rs  palette.rs  ui.rs
gamelib/: Cargo.toml  console.rs  gamelib.rs  prelude.rs
macroquad_shell/: Cargo.toml  mq_draw.rs  mq_game.rs  mq_libmain.rs  mq_main.rs  mq_resources.rs  mq_storage.rs
macroquad_shell/src/: main.rs  mq_draw.rs  mq_inputs.rs  mq_main.rs  mq_resources.rs  mq_storage.rs
physics_validation/: Cargo.toml  diffusion.txt
physics_validation/src/: main.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
proc_macros_impl/: Cargo.toml
proc_macros_impl/src/: derive_setters.rs  handle_macro.rs  lib.rs
shell_api/: Cargo.toml  gamecore_trait.rs  prelude.rs  shell_api.rs
shell_api/input/: button.rs  input_event.rs  inputs.rs  keymap.rs  mod.rs
shell_api/output/: color.rs  font_layout.rs  line.rs  mod.rs  output.rs  rectangle.rs
shell_api/src/: lib.rs  prelude.rs
shell_api/src/input/: button.rs  input_event.rs  inputs.rs  keybindings.rs  mod.rs
shell_api/src/output/: color.rs  mod.rs  output.rs  rectangle.rs  sprite.rs
web_shell/: Cargo.toml  event_listeners.rs  graphics_postprocessing.rs  js_commands.rs  js_renderer.rs  js_storage.rs  load_bitmap.rs  time.rs  web_shell.rs
webshell/: Cargo.toml  Trunk.toml  index.html
webshell/src/: commands.rs  event_listeners.rs  http_get.rs  js_commands.rs  js_renderer.rs  js_resources.rs  load_bitmap.rs  load_image.rs  main.rs  resources.rs  storage.rs  time.rs
webui/: Cargo.toml  index.html
webui/src/: main.rs
