[workspace]

resolver = "2"

members = [
	"corelibs/cel",
	"corelibs/core_util",
	"corelibs/fixed_str",
	"corelibs/geometry",
	"corelibs/matrix",
	"corelibs/memkeep",
	"corelibs/memkeep",
	"corelibs/pathfinder",
	"corelibs/vector",
	"gamecore",
	"macroquad_shell",
	"proc_macros",
	"proc_macros_impl",
	"shell_api",
	"webshell",
]

[workspace.dependencies]
cel = { path = "corelibs/cel" }
pathfinder = { path = "corelibs/pathfinder" }
core_util = { path = "corelibs/core_util" }
fixed_str = { path = "corelibs/fixed_str" }
gamecore = { path = "gamecore" }
geometry = { path = "corelibs/geometry" }
matrix = { path = "corelibs/matrix" }
memkeep = { path = "corelibs/memkeep" }
proc_macros = { path = "proc_macros" }
vector = { path = "corelibs/vector" }
shell_api = { path = "shell_api" }

anyhow = "1"
base64 = "0.22"
bincode = { version = "2", features = ["serde"] }
bytemuck = "1"
env_logger = "0.11"
fnv = "1"
futures = "0.3"
googletest = "0.14"
itertools = "0.14"
log = "0.4"
#image = { version = "0.25", default-features = false, features = ["png"] }
num-traits = "0.2"
num_enum = "0.7"
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", features = ["serde1"] }
ron = "0.10"
tiny-skia = "0.11"
serde = { version = "1", features = ["derive"] }


# ⚠️ It's easy to accidentally disable debug assertions etc.
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"
opt-level = 1
package.gamecore.opt-level = 1

package.macroquad.opt-level = 3
package.macroquad.debug-assertions = false
package.macroquad.overflow-checks = false
