[workspace]

resolver = "2"

members = [
	"a_strategy_game",
	"a_strategy_game/gamecore",
	"a_strategy_game/a_strategy_game_web",
	"aquarium/aquarium_web",
	"aquarium/aquarium_core",
	"corelibs/binpack2d",
	"corelibs/cel",
	"corelibs/core_util",
	"corelibs/fixed_str",
	"corelibs/geometry",
	"corelibs/matrix",
	"corelibs/memkeep",
	"corelibs/pathfinder",
	"corelibs/proc_macros",
	"corelibs/proc_macros_impl",
	"corelibs/vector",
	"macroquad_shell",
	"shell_api",
	"web_shell",
]

[workspace.dependencies]
aquarium_core = { path = "aquarium/aquarium_core" }
binpack2d = { path = "corelibs/binpack2d" }
cel = { path = "corelibs/cel" }
core_util = { path = "corelibs/core_util" }
fixed_str = { path = "corelibs/fixed_str" }
gamecore = { path = "a_strategy_game/gamecore" }
geometry = { path = "corelibs/geometry" }
macroquad_shell = { path = "macroquad_shell" }
matrix = { path = "corelibs/matrix" }
memkeep = { path = "corelibs/memkeep" }
pathfinder = { path = "corelibs/pathfinder" }
proc_macros = { path = "corelibs/proc_macros" }
shell_api = { path = "shell_api" }
vector = { path = "corelibs/vector" }
web_shell = { path = "web_shell" }

anyhow = "1"
base64 = "0.22"
bincode = { version = "2", features = ["serde"] }
bytemuck = "1"
env_logger = "0.11"
fnv = "1"
futures = "0.3"
googletest = "0.14"
itertools = "0.14"
log = "0.4"
macroquad = "0.4.14"
num-traits = "0.2"
num_enum = "0.7"
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", features = ["serde1"] }
ron = "0.10"
serde = { version = "1", features = ["derive"] }
tiny-skia = "0.11"


# ⚠️ It's easy to accidentally disable debug assertions etc.
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"
opt-level = 1
package.gamecore.opt-level = 1

package.macroquad.opt-level = 3
package.macroquad.debug-assertions = false
package.macroquad.overflow-checks = false
