[package]
name = "aquarium"
version = "3.0.0"
edition = "2024"
default-run = "aquarium"

[[bin]]
name = "aquarium"
path = "aquarium_mq.rs"

[dependencies]
macroquad_shell = { workspace = true }
macroquad = { workspace = true }
aquarium_core = { workspace = true }
core_util = { workspace = true }
log = { workspace = true }
proc_macros = { workspace = true }
