# WARNING: This Cargo.toml file is for binary `aquarium_mq` only.
# See `aquarium_core/Cargo.toml`.
# 
[package]
name = "aquarium"
version = "3.0.0"
edition = "2024"

[[bin]]
name = "aquarium"
path = "aquarium_mq.rs"

[dependencies]
macroquad_shell = { workspace = true }
macroquad = { workspace = true }
aquarium_core = { workspace = true }
core_util = { workspace = true }
log = { workspace = true }
proc_macros = { workspace = true }
