[package]
name = "macroquad_shell"
version = "1.0.0"
edition = "2024"

[lib]
path = "mq_main.rs"

[dependencies]

anyhow = { workspace = true }
bincode = { workspace = true }
env_logger = { workspace = true }
fixed_str = { workspace = true }
fnv = { workspace = true }
futures = { workspace = true }
gamecore = { workspace = true }
log = { workspace = true }
core_util = { workspace = true }
proc_macros = { workspace = true }
serde = { workspace = true }
shell_api = { workspace = true }
vector = { workspace = true }
num-traits = { workspace = true }
macroquad = { workspace = true }
