[package]
name = "proc_macros_impl"
version = "1.0.0"
edition = "2024"


[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = [ "full", "proc-macro", "derive", "parsing", ] }
#darling = "0.14"

# egui only
#[target.'cfg(target_arch = "wasm32")'.dependencies]
#getrandom = { version = "*", features = ["js", "js-sys"] }
