[package]
name = "shell_api"
version = "0.1.0"
edition = "2024"

[lib]
path = "shell_api.rs"

[dependencies]
core_util = { workspace = true }
fixed_str = { workspace = true }
fnv = { workspace = true }
geometry = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
proc_macros = { workspace = true }
serde = { workspace = true }
vector = { workspace = true }
