[package]
name = "webshell"
version = "1.0.0"
edition = "2024"

[dependencies]
engine = { workspace = true }
fnv = { workspace = true }
gamecore = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
vector = { workspace = true }
fixed_str = { workspace = true }

console_error_panic_hook = "0.1.7"
console_log = "1.0"
futures-channel = "0.3.31"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

web-sys = { version = "0.3.77", features = [
	"Blob",
	"CanvasGradient",
	"CanvasRenderingContext2d",
	"CssStyleDeclaration",
	"Document",
	"Document",
	"HtmlCanvasElement",
	"HtmlElement",
	"HtmlElement",
	"HtmlImageElement",
	"HtmlParagraphElement",
	"HtmlTextAreaElement",
	"ImageBitmap",
	"ImageData",
	"KeyboardEvent",
	"MouseEvent",
	"Navigator",
	"Performance",
	"Request",
	"RequestInit",
	"RequestMode",
	"Response",
	"Text",
	"Url",
	"Window",
] }
