[package]
name = "webshell"
version = "1.0.0"
edition = "2024"

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
fixed_str = { workspace = true }
fnv = { workspace = true }
gamecore = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
vector = { workspace = true }

console_error_panic_hook = "0.1.7"
console_log = "1.0"
futures-channel = "0.3.31"
futures = "0.3"
futures-util = "0.3"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

web-sys = { version = "0.3.77", features = [
	"Blob",
	"CanvasGradient",
	"CanvasRenderingContext2d",
	"CssStyleDeclaration",
	"Document",
	"Document",
	"HtmlCanvasElement",
	"HtmlElement",
	"HtmlElement",
	"HtmlImageElement",
	"HtmlParagraphElement",
	"HtmlTextAreaElement",
	"ImageBitmap",
	"ImageData",
	"Location",
	"KeyboardEvent",
	"MouseEvent",
	"Navigator",
	"Performance",
	"Request",
	"RequestInit",
	"RequestMode",
	"Response",
	"Storage",
	"Text",
	"Url",
	"Window",
] }
