[package]
name = "webui"
version = "1.0.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
futures-channel = "0.3.31"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
	"Blob",
	"CanvasRenderingContext2d",
	"Document",
	"HtmlCanvasElement",
	"HtmlElement",
	"HtmlImageElement",
	"ImageBitmap",
	"ImageData",
	"Request",
	"RequestInit",
	"RequestMode",
	"Response",
	"Text",
	"Url",
	"Window",
	"console",
] }
log = {workspace = true}
console_log = "1.0"