[package]
name = "gamecore"
version = "1.0.0"
edition = "2024"

[dependencies]

anyhow = { workspace = true }
cel = { workspace = true }
core_util = { workspace = true }
fixed_str = { workspace = true }
fnv = { workspace = true }
geometry = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
memkeep = { workspace = true }
num-traits = { workspace = true }
num_enum = { workspace = true }
pathfinder = { workspace = true }
proc_macros = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
shell_api = { workspace = true }
vector = { workspace = true }

[dev-dependencies]
googletest = { workspace = true }
env_logger = { workspace = true }
tiny-skia = { workspace = true }
