[package]
name = "aquarium_core"
version = "1.0.0"
edition = "2024"

[lib]
path = "aquarium_core.rs"

[dependencies]
shell_api = { workspace = true }
gamelib = { workspace = true }
serde = { workspace = true }
itertools = { workspace = true }
anyhow = { workspace = true }
proc_macros = { workspace = true }
fixed_str = { workspace = true }

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"
opt-level = 1
