[package]
name = "aquarium_core"
version = "1.0.0"
edition = "2024"

[lib]
path = "aquarium_core.rs"

[dependencies]
anyhow = { workspace = true }
fixed_str = { workspace = true }
gamelib = { workspace = true }
itertools = { workspace = true }
proc_macros = { workspace = true }
serde = { workspace = true }
shell_api = { workspace = true }
vector = { workspace = true }

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"
opt-level = 1
