# Cargo.toml for crate `aquarium_core`

[package]
name = "aquarium_core"
version = "1.0.0"
edition = "2024"

[lib]
path = "lib_aquarium.rs"

[dependencies]
anyhow = { workspace = true }
core_util = { workspace = true }
fixed_str = { workspace = true }
fnv = { workspace = true }
gamelib = { workspace = true }
geometry = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
matrix = { workspace = true }
num-traits = { workspace = true }
proc_macros = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
shell_api = { workspace = true }
vector = { workspace = true }

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"
opt-level = 1
