[package]
name = "matrix"
version = "1.0.0"
authors = ["Arne Vansteenkiste <barnex@gmail.com>"]
edition = "2024"

[dependencies]
bytemuck = { workspace = true, features = ["min_const_generics"] }
serde = { workspace = true, features = ["derive"] }
vector = { workspace = true }

[features]
#inspect = []

# egui_inspect = { path = "../egui_inspect" }
# egui = { workspace = true }
