[package]
name = "vector"
version = "2.0.0"
authors = ["Arne Vansteenkiste <barnex@gmail.com>"]
edition = "2024"

[dependencies]
bytemuck = { workspace = true, features = ["min_const_generics"] }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"] }
#egui = { workspace = true, optional = true }
#egui_inspect = { path = "../egui_inspect", optional = true }

#[features]
#inspect = ["egui", "egui_inspect"]
